Update Intro text

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNvcTCDTQugmNaFVU1qhOGE",
+      "authorship_tag": "ABX9TyM8M5nFSVRoqj+FowUucsCS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,9 @@
       "source": [
         "##**Intro**\n",
         "\n",
-        "This workflow explores the process of training a `Convolutional Neural Network (CNN)` with Keras based on the benchmark dataset EuroSAT. This noote book contains notes I've taken as I work through the example workflow presented in the AI for Earth monitoring MOOC on Futurelearn.\n"
+        "This workflow explores the process of training a `Convolutional Neural Network (CNN)` with Keras based on the benchmark dataset EuroSAT. This note book contains notes I've taken as I work through the example workflow presented in the AI for Earth monitoring MOOC on Futurelearn.\n",
+        "\n",
+        "There are two parts to this learning module, the first part as described above explores the process of training a convolutional neural ntwork based on EuroSAT benchmark data for land use/land cover classification while the second part explores the workflow for utilising the learned capabilities of our pre-trained model to infer land use / land cover classification on a Sentinel-2 level-1C tile image.   \n"
       ]
     },
     {
@@ -1187,7 +1189,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 52
         },
         "id": "sjmNyISLzukg",
         "outputId": "36286efe-5e48-494a-8b90-bd4e31205a2e"
@@ -1482,7 +1484,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
+          "height": 396
         },
         "id": "Rvnm0OceK2MD",
         "outputId": "ed1ffc57-62fe-4fb3-ed5f-d12583cc8c50"
@@ -1782,7 +1784,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
+          "height": 396
         },
         "id": "_6rf9lJI4BYB",
         "outputId": "595112c4-0584-4b1a-8c95-969342f0c40f"
