update intro and notes

--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOg4ctDJ8DLb5+GP+lSeO7t",
+      "authorship_tag": "ABX9TyMAso3unMx2VPzoS7aWkXdA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,13 @@
         "id": "DO04EX-h6mJI"
       },
       "source": [
-        "## **Data**"
+        "## **Data**\n",
+        "\n",
+        "The inference process utilizes the following data:\n",
+        "\n",
+        "* a `Sentinel-2 level-1C file`, which is available in the following folder: ./S2_Tile_based_classification/01_input_data/S2_tile_4_inference.\n",
+        "The scene shows a coasteal part over Italy on March 31, 20121. The scene is used as input data for the pretrained model in order to infer land use/land cover classes.\n",
+        "* a `pretrained  model`, a `convolutional neural network` which has been trained based on EuroSAT  data, as a benchmark dataset for land use / land cover classifications."
       ]
     },
     {
@@ -55,7 +61,11 @@
         "id": "nruaCeA-6p0V"
       },
       "source": [
-        "## **Additional Resources**"
+        "## **Additional Resources**\n",
+        "\n",
+        "* 3B - Tile-based classification with EuroSAT data - Training\n",
+        "* EuroSAT: A Novel Dataset and Deep Learning Benchmark for Land Use and Land Cover Classification\n",
+        "* EuroSAT data"
       ]
     },
     {
@@ -81,8 +91,23 @@
         "id": "l4upB8g262XH"
       },
       "source": [
-        "# **1. Load a Sentinel-2 Level-1C tile**"
+        "# **1. Load a Sentinel-2 Level-1C tile**\n",
+        "\n",
+        "**Import libraries**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jiqlwo6HDQZ9"
+      },
+      "source": [
+        "## Begin S3FS import snippet ##\n",
+        "import os, sys\n",
+        "s3_home = os.getcwd()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
