--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAso3unMx2VPzoS7aWkXdA",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM4155A+NbVl/VkxBoKdTZS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +105,27 @@
       "source": [
         "## Begin S3FS import snippet ##\n",
         "import os, sys\n",
-        "s3_home = os.getcwd()"
+        "s3_home = os.getcwd()\n",
+        "try: sys.path.remove(s3_home) # Remove the S3 root from the path\n",
+        "except Exception: pass\n",
+        "\n",
+        "# Begin imports #\n",
+        "import tensorflow as tf\n",
+        "from osgeo import gdal_array, osr, gdal\n",
+        "import glob\n",
+        "import numpy as np\n",
+        "from scipy import ndimage\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.colors\n",
+        "import warnings\n",
+        "warnings.,filterwarnings(\"ignoe\")\n",
+        "# end imports #\n",
+        "\n",
+        "os.chdir(current_dir) # go back to your previous directory\n",
+        "\n",
+        "sys.path.append(s3_home) # restore the s3 root in the path\n",
+        "\n",
+        "## end s3fs import snippet ##"
       ],
       "execution_count": null,
       "outputs": []
