load helper functions

--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM4155A+NbVl/VkxBoKdTZS",
+      "authorship_tag": "ABX9TyNFGe4Ih6unfzWhEzuhL0bC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,17 +118,49 @@
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.colors\n",
         "import warnings\n",
-        "warnings.,filterwarnings(\"ignoe\")\n",
+        "warnings.filterwarnings(\"ignore\")\n",
         "# end imports #\n",
         "\n",
-        "os.chdir(current_dir) # go back to your previous directory\n",
+        "# os.chdir(current_dir) # go back to your previous directory\n",
         "\n",
         "sys.path.append(s3_home) # restore the s3 root in the path\n",
         "\n",
         "## end s3fs import snippet ##"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KgVm7HnQs4me"
+      },
+      "source": [
+        "Load helper functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gp0DBiRgs33i",
+        "outputId": "271c3343-9cb6-4470-9140-69df34218428"
+      },
+      "source": [
+        "%run ./'Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb'"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "ERROR:root:File `'/drive/MyDrive/Colab.py'` not found.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
