--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP0Fw2yROF/z0dYmJNHwHWG",
+      "authorship_tag": "ABX9TyPvPBEBVmZzFvy0tRgzdL8o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,11 +89,9 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l4upB8g262XH"
+        "id": "aU9YkbgoSV2e"
       },
       "source": [
-        "# **1. Load a Sentinel-2 Level-1C tile**\n",
-        "\n",
         "**Import libraries**"
       ]
     },
@@ -467,6 +465,34 @@
         "    return windows"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l4upB8g262XH"
+      },
+      "source": [
+        "# **1. Load a Sentinel-2 Level-1C tile**\n",
+        "\n",
+        "In the first step, we lod the input data for the inference process. The input data is a Sentinel2 Level-1C tile which shall be classified with the help of the pre-trained model.\n",
+        "\n",
+        "Let us define the Python dictionary which holds information about where the Sentinel-2 Level-1C data is stored. Next we'll define `main_path`, `sentinel2_safe_name` and `sentinel2_safe_path`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-i8-7-jDSd1p"
+      },
+      "source": [
+        "data_input = {}\n",
+        "data_input['main_path'] ='./S2_Tile_based_classification/'\n",
+        "\n",
+        "data_input['sentinel2_safe_name'] = 'S2AA_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/'\n",
+        "data_input['sentinel3_safe_path'] = data_input['main_path']+'01_input_data/S2_tile_4_inference/'+data_input['sentinel2_safe_name']"
+      ],
+      "execution_count": 3,
       "outputs": []
     },
     {
