transform Sentinel-2 Level-1C file into 3 arrays. combine bands with same spatial resolution

--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPvPBEBVmZzFvy0tRgzdL8o",
+      "authorship_tag": "ABX9TyP+KPH6Z3D9MqIdNwQFmXiS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,6 +106,10 @@
         "try: sys.path.remove(s3_home) # Remove the S3 root from the path\n",
         "except Exception: pass\n",
         "\n",
+        "current_dir = os.getcwd()\n",
+        "\n",
+        "# os.chdir('/home/jovyan') # Temporarily move to another directory\n",
+        "\n",
         "# Begin imports #\n",
         "import tensorflow as tf\n",
         "from osgeo import gdal_array, osr, gdal\n",
@@ -119,13 +122,13 @@
         "warnings.filterwarnings(\"ignore\")\n",
         "# end imports #\n",
         "\n",
-        "# os.chdir(current_dir) # go back to your previous directory\n",
+        "os.chdir(current_dir) # go back to your previous directory\n",
         "\n",
         "sys.path.append(s3_home) # restore the s3 root in the path\n",
         "\n",
         "## end s3fs import snippet ##"
       ],
-      "execution_count": 4,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -255,7 +258,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -296,7 +299,7 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -346,7 +349,7 @@
         "\n",
         "    return stack_10m"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -409,7 +412,7 @@
         "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
         "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -464,7 +467,7 @@
         "\n",
         "    return windows"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -487,13 +490,83 @@
       },
       "source": [
         "data_input = {}\n",
-        "data_input['main_path'] ='./S2_Tile_based_classification/'\n",
+        "data_input['main_path'] ='/content/drive/MyDrive/Land Classification/S2_Tile_based_classification/'\n",
         "\n",
-        "data_input['sentinel2_safe_name'] = 'S2AA_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/'\n",
-        "data_input['sentinel3_safe_path'] = data_input['main_path']+'01_input_data/S2_tile_4_inference/'+data_input['sentinel2_safe_name']"
+        "data_input['sentinel2_safe_name'] = 'S2A_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/'\n",
+        "data_input['sentinel2_safe_path'] = data_input['main_path']+'01_Input_data/S2_tile_4_inference/' + data_input['sentinel2_safe_name']"
       ],
-      "execution_count": 3,
+      "execution_count": 47,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tvbReGKCpFXm"
+      },
+      "source": [
+        "The next step makes use of the `function from_folder_to_stack()`. The functions transforms the Sentinel-2 Level-1C file which is disseminated in the `.SAFE` format into three different arrays, each combining the bands with the same spatial resolution. Sentinel-2 samples 13 spectral bands, which have three different resolutions:`10m, 20m and 60m`.\n",
+        "\n",
+        "The result of the function are three stacked arrays:\n",
+        "\n",
+        "* `stack_10m`: stack combining bands with 10m spatial resolution `(B02, B03, B04, B08)\n",
+        "* `stack_20m`: stack combining bands with 20m spatial resolution `(B05, B06, B07, B11, B12, B8A)\n",
+        "* `stack_60m`: stack combining bands with 60m spatial resolution `(B01, B09, B10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 633
+        },
+        "id": "Hmcdhnv7ptht",
+        "outputId": "7ee7a470-2a75-4b6c-d24d-d686dde21a0f"
+      },
+      "source": [
+        "import numpy as np\n",
+        "safe_path = data_input['sentinel2_safe_path']\n",
+        "stack_10m, stack_20m, stack_60m = from_folder_to_stack(safe_path)"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: Loading .jp2 images in /content/drive/MyDrive/Land Classification/S2_Tile_based_classification/01_Input_data/S2_tile_4_inference/S2A_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/GRANULE/L1C_T33TTG_A030149_20210331T100404/IMG_DATA/\n",
+            "[AI4EO_MOOC]_log: Reading .jp2 files in /content/drive/MyDrive/Land Classification/S2_Tile_based_classification/01_Input_data/S2_tile_4_inference/S2A_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/GRANULE/L1C_T33TTG_A030149_20210331T100404/IMG_DATA/\n",
+            "[AI4EO_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B10.jp2\n",
+            "[AI4EO_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B09.jp2\n",
+            "[AI4EO_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B01.jp2\n",
+            "[AI4E_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B05.jp2\n",
+            "[AI4E_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B07.jp2\n",
+            "[AI4E_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B06.jp2\n",
+            "[AI4E_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B11.jp2\n",
+            "[AI4E_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B8A.jp2\n",
+            "[AI4E_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B12.jp2\n",
+            "[AI4E)_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B03.jp2\n",
+            "[AI4E)_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B04.jp2\n",
+            "[AI4E)_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B08.jp2\n",
+            "[AI4E)_MOOC]_log: Using .jp2 image: T33TTG_20210331T100021_B02.jp2\n",
+            "[AI4EO_MOOC]_log: Sorting stack 10m...\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-49-ac586fb8c50b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msafe_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sentinel2_safe_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_20m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_60m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_folder_to_stack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msafe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-42-63b678e65515>\u001b[0m in \u001b[0;36mfrom_folder_to_stack\u001b[0;34m(safe_path, data_bands_20m, data_bands_60m)\u001b[0m\n\u001b[1;32m     88\u001b[0m   \u001b[0msorted_list_10m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'02'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'03'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'04'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'08'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Sorting stack 10m...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m   \u001b[0mstack_10m_final_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list_10m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m   \u001b[0mstack_20m\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_stack_20m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-43-99f7efa1a179>\u001b[0m in \u001b[0;36mstack_sort\u001b[0;34m(stack_in, lst_code, sorted_list)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_in\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_in\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mstack_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munit16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mlen_list_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    213\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                 raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0;32m--> 215\u001b[0;31m                                      \"{!r}\".format(__name__, attr))\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'unit16'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -512,7 +585,7 @@
       "source": [
         ""
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
