--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+KPH6Z3D9MqIdNwQFmXiS",
+      "mount_file_id": "1ybbQTHScMz7y2Gur32DgQOvoFSKQRtWc",
+      "authorship_tag": "ABX9TyNqAhGGuR0kafCyzvAEnSqu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,7 +129,7 @@
         "\n",
         "## end s3fs import snippet ##"
       ],
-      "execution_count": 41,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -258,7 +259,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 42,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -299,7 +300,7 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": 43,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -349,7 +350,7 @@
         "\n",
         "    return stack_10m"
       ],
-      "execution_count": 44,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -412,7 +413,61 @@
         "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
         "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
       ],
-      "execution_count": 45,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2rf5SvGdpOko"
+      },
+      "source": [
+        "'''\n",
+        "function name:\n",
+        "  sentinel2_format\n",
+        "description:\n",
+        "  This function transforms the multistack into sentinel2 format arrays with bands in the right positions for our AI model.\n",
+        "input:\n",
+        "  total_stack: array that is the concatenation of stack10, stack_20mTo10m and stack_60mTo10m.\n",
+        "output:\n",
+        "  sentinel2: sentinel2 format array\n",
+        "'''\n",
+        "def sentinel2_format(\n",
+        "        total_stack):\n",
+        "  \n",
+        "    row_tot, col_tot, bands_tot = total_stack.shape\n",
+        "    sentinel2 = np.zeros((row_tot, col_tot, bands_tot),dtype=np.unit16)\n",
+        "\n",
+        "    print(\"[AI4EO_MOOC]_log: Creating a total stack with following list of bands:\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 1 - Coastal aerosol\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 2 - Blue\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 3 - Green\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 4 - Red\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 5 - Vegetation red edge\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 6 - Vegetation red edge\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 7 - Vegetation red edge\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 8 - NIR\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 8A - Narrow NIR\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 9 - Water vapour\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 10 - SWIR - Cirrus\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 11 - SWIR\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 12 - SWIR\")\n",
+        "\n",
+        "    sentinel2[:, :, 0] = total_stack[:, :, 10]\n",
+        "    sentinel2[:, :, 1] = total_stack[:, :, 0]\n",
+        "    sentinel2[:, :, 2] = total_stack[:, :, 1]\n",
+        "    sentinel2[:, :, 3] = total_stack[:, :, 2]\n",
+        "    sentinel2[:, :, 4] = total_stack[:, :, 4]\n",
+        "    sentinel2[:, :, 5] = total_stack[:, :, 5]\n",
+        "    sentinel2[:, :, 6] = total_stack[:, :, 6]\n",
+        "    sentinel2[:, :, 7] = total_stack[:, :, 3]\n",
+        "    sentinel2[:, :, 8] = total_stack[:, :, 9]\n",
+        "    sentinel2[:, :, 9] = total_stack[:, :, 11]\n",
+        "    sentinel2[:, :, 10] = total_stack[:, :, 12]\n",
+        "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
+        "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
+      ],
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -467,7 +522,7 @@
         "\n",
         "    return windows"
       ],
-      "execution_count": 46,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -495,7 +550,7 @@
         "data_input['sentinel2_safe_name'] = 'S2A_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/'\n",
         "data_input['sentinel2_safe_path'] = data_input['main_path']+'01_Input_data/S2_tile_4_inference/' + data_input['sentinel2_safe_name']"
       ],
-      "execution_count": 47,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -521,14 +576,14 @@
           "height": 633
         },
         "id": "Hmcdhnv7ptht",
-        "outputId": "7ee7a470-2a75-4b6c-d24d-d686dde21a0f"
+        "outputId": "2b41ac08-d6bd-40bf-fead-52cea4e01ead"
       },
       "source": [
         "import numpy as np\n",
         "safe_path = data_input['sentinel2_safe_path']\n",
         "stack_10m, stack_20m, stack_60m = from_folder_to_stack(safe_path)"
       ],
-      "execution_count": 49,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,14 +614,36 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-49-ac586fb8c50b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msafe_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sentinel2_safe_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_20m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_60m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_folder_to_stack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msafe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-42-63b678e65515>\u001b[0m in \u001b[0;36mfrom_folder_to_stack\u001b[0;34m(safe_path, data_bands_20m, data_bands_60m)\u001b[0m\n\u001b[1;32m     88\u001b[0m   \u001b[0msorted_list_10m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'02'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'03'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'04'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'08'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Sorting stack 10m...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m   \u001b[0mstack_10m_final_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list_10m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m   \u001b[0mstack_20m\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_stack_20m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-43-99f7efa1a179>\u001b[0m in \u001b[0;36mstack_sort\u001b[0;34m(stack_in, lst_code, sorted_list)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_in\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_in\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mstack_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munit16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mlen_list_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-15-ac586fb8c50b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msafe_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sentinel2_safe_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_20m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_60m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_folder_to_stack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msafe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-2-63b678e65515>\u001b[0m in \u001b[0;36mfrom_folder_to_stack\u001b[0;34m(safe_path, data_bands_20m, data_bands_60m)\u001b[0m\n\u001b[1;32m     88\u001b[0m   \u001b[0msorted_list_10m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'02'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'03'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'04'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'08'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Sorting stack 10m...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m   \u001b[0mstack_10m_final_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list_10m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m   \u001b[0mstack_20m\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_stack_20m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-3-99f7efa1a179>\u001b[0m in \u001b[0;36mstack_sort\u001b[0;34m(stack_in, lst_code, sorted_list)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_in\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_in\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mstack_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munit16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mlen_list_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    213\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                 raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0;32m--> 215\u001b[0;31m                                      \"{!r}\".format(__name__, attr))\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'unit16'"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9ilFKkIVQwXf"
+      },
+      "source": [
+        "On inspecting the dimensions of the three stacked arrays, we 'll notice that the stack combining bands with 10m resolution consists of 4 bands. The one combining bands with 20m resolution consists of 6 bands and the one combining bands with 60m resolution consists of 3 bands."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uTBtVvysQyOI"
+      },
+      "source": [
+        "print(stack_10m.shape)\n",
+        "print(stack_20m.shape)\n",
+        "print(stack_60m.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -578,12 +655,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yiHPX_jipptE"
+      },
+      "source": [
+        "In the next step we resample the arrays containing bands with 20m and 60m resolution. You can use the function `resample_3d()` to achive this. The function takes the following keyword arguments:\n",
+        "\n",
+        "* `stack`: array to be resampled to 10m\n",
+        "* `row10m`: number of rows of the 10m resolution array\n",
+        "* `col10m`: number of columns of the 10m resolution array\n",
+        "* `rate`: to which rate the input stack shall be resampled\n",
+        "\n",
+        "We have to apply the function to both array stacks, `stack_20m` and `stack_60m`. This results in all three stacks having the same spatial resolution of 10m."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6VIEJ2tMu_KQ"
       },
       "source": [
-        ""
+        "n_row, n_col b10 = stack_10m.shape\n",
+        "\n",
+        "print('[AI4EO_MOOC]_log: Resampling stack with 20 m pixel size...')\n",
+        "stack_20mTo10m = resample_3d(stack = stack_20m,\n",
+        "                             row10m = n_row,\n",
+        "                             col10m = n_col,\n",
+        "                             rate= 2)\n",
+        "\n",
+        "print('[AI4EO_MOOC]_log: Resampling stack with 60 m pixel size...')\n",
+        "stack_60mTo10m = resample_3d(stack = stack_60m,\n",
+        "                             row10m = n_row,\n",
+        "                             col10m = n_col,\n",
+        "                             rate= 6)\n",
+        "\n",
+        "print(stack_20mTo10m.shape)\n",
+        "print(stack_60mTo10m.shape)"
       ],
       "execution_count": null,
       "outputs": []
