define variables that help us specify the inference process

--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
       "mount_file_id": "1ybbQTHScMz7y2Gur32DgQOvoFSKQRtWc",
-      "authorship_tag": "ABX9TyOwjJupZU1vzkjILmK5AAhD",
+      "authorship_tag": "ABX9TyN+PUd0mGGkl/wZ24IAQQ4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
         "\n",
         "## end s3fs import snippet ##"
       ],
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
         "## end s3fs import snippet ##\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -310,7 +310,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -351,7 +351,7 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -401,7 +401,7 @@
         "\n",
         "    return stack_10m"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -464,7 +464,7 @@
         "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
         "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -519,7 +519,7 @@
         "\n",
         "    return windows"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -547,7 +547,7 @@
         "data_input['sentinel2_safe_name'] = 'S2A_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/'\n",
         "data_input['sentinel2_safe_path'] = data_input['main_path']+'01_Input_data/S2_tile_4_inference/' + data_input['sentinel2_safe_name']"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -572,14 +572,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hmcdhnv7ptht",
-        "outputId": "b2443926-c9e6-4588-9d7c-e9064963f28a"
+        "outputId": "006a072b-1de4-4d73-c297-f25753cd4c5c"
       },
       "source": [
         "import numpy as np\n",
         "safe_path = data_input['sentinel2_safe_path']\n",
         "stack_10m, stack_20m, stack_60m = from_folder_to_stack(safe_path)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,14 +629,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uTBtVvysQyOI",
-        "outputId": "6267f040-11ae-4a29-9ab3-71b2a98d034f"
+        "outputId": "19675a09-7dbb-4502-cd2a-1595ba550987"
       },
       "source": [
         "print(stack_10m.shape)\n",
         "print(stack_20m.shape)\n",
         "print(stack_60m.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +681,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "349b1990-8dd0-4eea-e411-66607a159d3b"
+        "outputId": "b8ca1f69-96d9-4830-8f3d-b9c13c3abbae"
       },
       "source": [
         "n_row, n_col, b10 = stack_10m.shape\n",
@@ -737,7 +737,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XMY0AAOLG9dR",
-        "outputId": "e4527750-1a01-4b54-f74d-aba897c219a5"
+        "outputId": "4f474dff-4219-44aa-95bf-596af1d03c79"
       },
       "source": [
         "print('(AI4EO_MOOC)_log: Creating multistack with 10-20-60 m pixel size')\n",
@@ -785,24 +785,24 @@
           "height": 296
         },
         "id": "b1q-1g6iH-zK",
-        "outputId": "ebaa6812-ccc5-493b-fb79-8f64ad8bb6f9"
+        "outputId": "c394e93a-3f2d-486a-801a-e588ac23fbde"
       },
       "source": [
         "plt.ylabel(\"Refelectance\")\n",
         "plt.xlabel(\"Band\")\n",
         "plt.plot(total_stack[200,200,:],'-o')"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7fe5dc32e9d0>]"
+              "[<matplotlib.lines.Line2D at 0x7efd0580fad0>]"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         },
         {
           "output_type": "display_data",
@@ -860,12 +860,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0og83flj4otq",
-        "outputId": "f4afd350-8e2f-473f-876e-b278d99acb51"
+        "outputId": "f8f7bcda-283f-422a-b2f9-4a774bde9962"
       },
       "source": [
         "s2_arr = sentinel2_format(total_stack)"
       ],
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,13 +906,12 @@
           "height": 464
         },
         "id": "YjNHxC-25mq8",
-        "outputId": "bcdf4225-de94-40d6-b93e-879d5446e4bd"
+        "outputId": "d002ed51-84eb-4778-a87e-12c3c95fd131"
       },
       "source": [
-        "from matplotlib import pyplot as pyplot\n",
         "plt.ylabel(\"Reflectance\")\n",
-        "plt.xlabel('Band')\n",
-        "plt.plot(s2_arr[200,200,:],'-o')"
+        "plt.xlabel(\"Band\")\n",
+        "plt.plot(s2_arr[200, 200,:],'-o')"
       ],
       "execution_count": 22,
       "outputs": [
@@ -923,7 +922,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-7396283451f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Reflectance\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Band'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms2_arr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'-o'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-22-fd982a6720b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Reflectance\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Band\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms2_arr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'-o'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
           ]
         },
@@ -959,7 +958,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E3kQmzm10tuY",
-        "outputId": "070bed4d-2c9e-4f30-a38f-244e0b82afb9"
+        "outputId": "153f1da4-5b53-45f8-ef48-ced222e94b1f"
       },
       "source": [
         "data_input['pre_trained_model_name'] = 'keras_sentinel2_classification_trained_model_e50_9190.h5'\n",
@@ -968,7 +967,7 @@
         "model = tf.keras.models.load_model(data_input['pre_trained_model_path'] + data_input['pre_trained_model_name'])\n",
         "model.summary()"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,7 +1030,49 @@
         "id": "hB5OtCYy9NUg"
       },
       "source": [
-        "#**5. Divide the Sentinel-2 L1C tile into  64x64 windows**"
+        "#**5. Divide the Sentinel-2 L1C tile into  64x64 windows**\n",
+        "\n",
+        "SInce the Convolutional Neural Network has been trained on EuroSAT benchmark data, which have a dimension of `[13, 64, 64]`, the trained model can only predict on `64x64 pixel` subsets (so-called chips).\n",
+        "\n",
+        "We can apply the function `sliding()`, which divides the Sentinel-2 image with a dimension of `10980 x 10980 pixels` into multiple subsets with a size of `64 x 64 pixels`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        },
+        "id": "CfmouY01pgHE",
+        "outputId": "28246e30-3b09-433a-fa5b-d124f14b91f2"
+      },
+      "source": [
+        "print('[AI4EO_MOOC]_log: Divide all images into windows for the inference step')\n",
+        "\n",
+        "target_shape = (s2_arr.shape[0], s2_arr.shape[1])\n",
+        "windows = sliding(target_shape, 64, fixed=True)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: Divide all images into windows for the inference step\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-1a0c4eab61d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Divide all images into windows for the inference step'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtarget_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms2_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms2_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mwindows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfixed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+          ]
+        }
       ]
     },
     {
@@ -1040,8 +1081,26 @@
         "id": "uPbLp7xL9Z8v"
       },
       "source": [
-        "#**6. Infer land use classes**"
+        "#**6. Infer land use classes**\n",
+        "\n",
+        "The next step is the inference process. In this step we apply the loaded model and predict the probabilities of each of the ten land use classes for each pixel. Let's define some variables that help us specify the parameters for the inference process.  Let us define `batch_size=10`, which specifies the number of parallel computations and also reduces the number of iterations during the inference process by a factor of 10."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PnSgPEbQqXma"
+      },
+      "source": [
+        "windows = iter(windows)\n",
+        "windows_class = iter(windows)\n",
+        "\n",
+        "batch_size = 10\n",
+        "total_chips = len(windows)\n",
+        "num_steps = int(total_chips / batch_size)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
